codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__follow_tests__running_without_composer_hint.snap
---
source: tui/src/app/owned_transcript_follow_tests.rs
expression: "crate::chatwidget::tests::helpers::normalize_snapshot_paths(super::tests::buffer_text(buffer))"
---
transcript row 36
transcript row 37
transcript row 38
transcript row 39

• Working (0s • esc to interrupt)


› draft stays here

  GPT-5.6-Sol default · /tmp/project
  tab to queue message
